--- a/index.html
+++ b/index.html
@@ -704,7 +704,13 @@ function init(){
       flagsEl.innerHTML = flags.join(' ');
     };
 
-    whenFSReady(()=> window.__fs.subscribe(playerId, (data)=> updateHUD(data)));
+    whenFSReady(()=> window.__fs.subscribe(playerId, (doc)=>{
+      if(!doc || !doc.data()){
+        updateHUD(null);
+      } else {
+        updateHUD(doc.data());
+      }
+    }));
     return;
   }
 
